--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>MyTest.T001_WebsiteLang_en</td></tr>
+<tr><td>MyTest.T003_ReqAppointment</td></tr>
 <tr><td>MyTest.T002_SearchFunctionality</td></tr>
 </table>
