--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\User\AppData\Local\Temp\testng-eclipse--123073503\testng-customsuite.xml</span>
+                    <span>C:\Users\User\AppData\Local\Temp\testng-eclipse-62442540\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MyTest" class="method navigator-link" hash-for-method="T003_ReqAppointment">T003_ReqAppointment</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="MyTest" class="method navigator-link" hash-for-method="BMI_Calculator">BMI_Calculator</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="T003_ReqAppointment">
-                  </a> <!-- T003_ReqAppointment -->
-                  <span class="method-name">T003_ReqAppointment</span>
+                  <a name="BMI_Calculator">
+                  </a> <!-- BMI_Calculator -->
+                  <span class="method-name">BMI_Calculator</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\User\AppData\Local\Temp\testng-eclipse--123073503\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\User\AppData\Local\Temp\testng-eclipse-62442540\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'T003_ReqAppointment')
+data.setCell(0, 1, 'BMI_Calculator')
 data.setCell(0, 2, 'MyTest')
-data.setCell(0, 3, 9958);
+data.setCell(0, 3, 10316);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -210,13 +210,15 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">MyTest</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">T001_WebsiteLang_en</span>
+                <br/>
+                <span class="ignored-method-name">T003_ReqAppointment</span>
                 <br/>
                 <span class="ignored-method-name">T002_SearchFunctionality</span>
                 <br/>
@@ -236,8 +238,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">T003_ReqAppointment</span>
-                <span class="method-start">4984 ms</span>
+                <span class="method-name">BMI_Calculator</span>
+                <span class="method-start">6456 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
