--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\User\AppData\Local\Temp\testng-eclipse-62442540\testng-customsuite.xml</span>
+                    <span>C:\Users\User\AppData\Local\Temp\testng-eclipse--152563017\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -105,6 +105,31 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="MyTest" class="method navigator-link" hash-for-method="BMI_Calculator">BMI_Calculator</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTest" class="method navigator-link" hash-for-method="HomePageLoaded">HomePageLoaded</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTest" class="method navigator-link" hash-for-method="NavigationFunctionality">NavigationFunctionality</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTest" class="method navigator-link" hash-for-method="T003_ReqAppointment">T003_ReqAppointment</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTest" class="method navigator-link" hash-for-method="T003_WebsiteLang_en">T003_WebsiteLang_en</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTest" class="method navigator-link" hash-for-method="T004_SearchFunctionality">T004_SearchFunctionality</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,12 +157,47 @@
                   <span class="method-name">BMI_Calculator</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="HomePageLoaded">
+                  </a> <!-- HomePageLoaded -->
+                  <span class="method-name">HomePageLoaded</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NavigationFunctionality">
+                  </a> <!-- NavigationFunctionality -->
+                  <span class="method-name">NavigationFunctionality</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="T003_ReqAppointment">
+                  </a> <!-- T003_ReqAppointment -->
+                  <span class="method-name">T003_ReqAppointment</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="T003_WebsiteLang_en">
+                  </a> <!-- T003_WebsiteLang_en -->
+                  <span class="method-name">T003_WebsiteLang_en</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="T004_SearchFunctionality">
+                  </a> <!-- T004_SearchFunctionality -->
+                  <span class="method-name">T004_SearchFunctionality</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\User\AppData\Local\Temp\testng-eclipse-62442540\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\User\AppData\Local\Temp\testng-eclipse--152563017\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,16 +246,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'BMI_Calculator')
+data.setCell(0, 1, 'NavigationFunctionality')
 data.setCell(0, 2, 'MyTest')
-data.setCell(0, 3, 10316);
+data.setCell(0, 3, 39894);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'BMI_Calculator')
+data.setCell(1, 2, 'MyTest')
+data.setCell(1, 3, 19790);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'T003_ReqAppointment')
+data.setCell(2, 2, 'MyTest')
+data.setCell(2, 3, 17601);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'T004_SearchFunctionality')
+data.setCell(3, 2, 'MyTest')
+data.setCell(3, 3, 9002);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'T003_WebsiteLang_en')
+data.setCell(4, 2, 'MyTest')
+data.setCell(4, 3, 4778);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'HomePageLoaded')
+data.setCell(5, 2, 'MyTest')
+data.setCell(5, 3, 3369);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -210,20 +290,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">MyTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">T001_WebsiteLang_en</span>
-                <br/>
-                <span class="ignored-method-name">T003_ReqAppointment</span>
-                <br/>
-                <span class="ignored-method-name">T002_SearchFunctionality</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -238,8 +307,28 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
+                <span class="method-name">HomePageLoaded</span>
+                <span class="method-start">15132 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">NavigationFunctionality</span>
+                <span class="method-start">18512 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">T003_WebsiteLang_en</span>
+                <span class="method-start">58412 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">T004_SearchFunctionality</span>
+                <span class="method-start">63192 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">T003_ReqAppointment</span>
+                <span class="method-start">72197 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">BMI_Calculator</span>
-                <span class="method-start">6456 ms</span>
+                <span class="method-start">89800 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
