--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>T002_SearchFunctionality</td>
+<td>T004_SearchFunctionality</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -19,7 +19,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>T001_WebsiteLang_en</td>
+<td>T003_WebsiteLang_en</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>HomePageLoaded</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>NavigationFunctionality</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
