--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d9dab">  <td>25/07/21 14:23:40</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;MyTest.Mysetup()[pri:0, instance:MyTest@5f9678e1]">&gt;&gt;Mysetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>25/07/21 14:23:46</td>   <td>6447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.BMI_Calculator()[pri:4, instance:MyTest@5f9678e1]">BMI_Calculator</td> 
+<tr bgcolor="7d9dab">  <td>25/07/22 12:30:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.T003_ReqAppointment()[pri:5, instance:MyTest@5f9678e1]">T003_ReqAppointment</td> 
   <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>25/07/22 12:31:02</td>   <td>17603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.BMI_Calculator()[pri:6, instance:MyTest@5f9678e1]">BMI_Calculator</td> 
+  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>25/07/22 12:29:47</td>   <td>-57065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.HomePageLoaded()[pri:1, instance:MyTest@5f9678e1]">HomePageLoaded</td> 
+  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>25/07/22 12:30:30</td>   <td>-13785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.T003_WebsiteLang_en()[pri:3, instance:MyTest@5f9678e1]">T003_WebsiteLang_en</td> 
+  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>25/07/22 12:29:51</td>   <td>-53685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.NavigationFunctionality()[pri:2, instance:MyTest@5f9678e1]">NavigationFunctionality</td> 
+  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>25/07/22 12:30:35</td>   <td>-9005</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.T004_SearchFunctionality()[pri:4, instance:MyTest@5f9678e1]">T004_SearchFunctionality</td> 
+  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>25/07/22 12:29:32</td>   <td>-72190</td> <td>&nbsp;</td><td title="&gt;&gt;MyTest.Mysetup()[pri:0, instance:MyTest@5f9678e1]">&gt;&gt;Mysetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
 </table>
